--- a/index.html
+++ b/index.html
@@ -384,6 +384,10 @@
 
 
 
+                    <div id="gallery" class="gallery"></div>
+
+
+
 
 
 
@@ -393,7 +397,7 @@
             </div>
            
 
-            
+
 
             <!-- Modal -->
             <div class="modal fade" id="PaseModaQR">
