--- a/index.html
+++ b/index.html
@@ -382,15 +382,22 @@
                         </center>
                     </div>
 
+                </center>
+            </div>
+           
 
+
+
+
+            <div class="pst_relative zdex_4 overflow_hidden">
+
+                <div class="pst_absolute w_100  toppx_70 w_95"> <img class="w_100 no_touch" src="manchas2.png"> </div>
+
+                <center class="pst_relative top_80 px_20">
+
+       
 
                     <div id="gallery" class="gallery"></div>
-
-
-
-
-
-
 
 
                 </center>
